# PromptKey

./: .gitignore  CHECKPOINT_FRONTEND_COMPLETE.md  CHECKPOINT_IPC_LAYER_COMPLETE.md  Cargo.toml  DEEP_TEARDOWN_REPORT.md  FINAL_BUILD_REPORT.md  Functional_Spec.md  GUI_RENOVATION_GUIDE.md  IDE_COMPATIBILITY.md  LICENSE  North_Star.md  PHASE0_EXECUTIVE_SUMMARY.md  README.md  REFACTOR_GUIDE.md  STARTUP_GUIDE.md  T0008_INTEGRATION_TEST_REPORT.md  T1022_E2E_TEST_REPORT.md  TODO.md  Technical_Spec.md  UIA_INJECTION_IMPROVEMENTS.md  VALUE.md  coupling_analysis.md  deps_service.md  hotspots_analysis.md  main_simple.js  pack-release.ps1  start-prompt-manager.bat  start-prompt-manager.ps1  styles.css  tauri.conf.json  verify_t1001.rs  verify_t1001.sql
.claude/: settings.local.json
.lingma/rules/: rules.md
.qoder/quests/: project-review-uia-troubleshooting.md
blueprint/: 00_AUDIT_UIA_REMOVAL.md  00_PRD_UIA_REMOVAL.md  00_RFC_UIA_REMOVAL.md  01_AUDIT_QUICK_SELECTION_PANEL.md  01_PRD_QUICK_SELECTION_PANEL.md  01_RFC_QUICK_SELECTION_PANEL.md  02_AUDIT_PROMPT_WHEEL.md  02_PRD_PROMPT_WHEEL.md  02_RFC_PROMPT_WHEEL.md  02_TASKS_PROMPT_WHEEL.md  03_PRD_GUI_RENOVATION.md  04_RFC_GUI_RENOVATION.md  05_COMPLEXITY_AUDIT.md  06_TASKS_GUI_RENOVATION.md  TASKS.md
scout/: SCOUT_CONCEPT_MODEL.md  SCOUT_DEPS_ANALYSIS.md  SCOUT_GIT_FORENSICS.md  SCOUT_INVARIANTS.md  SCOUT_REPORT.md  SCOUT_RISK_REPORT.md
scripts/: Cargo.toml  ide_compatibility_test.rs  smoke.ps1  test-ide-compatibility.ps1  test_uia.rs
service/: Cargo.toml
service/src/: db.rs  main.rs
service/src/config/: mod.rs
service/src/context/: mod.rs
service/src/hotkey/: mod.rs
service/src/injector/: mod.rs
service/src/ipc/: inject_server.rs  mod.rs
src/: fuse.min.js  index.html  inject_pipe_client.rs  ipc_listener.rs  launcher.rs  main.js  main.rs  main_simple.js  selector.css  selector.html  selector.js  styles.css  styles_modern.css  styles_new.css  wheel.css  wheel.html  wheel.js
src/config/: mod.rs
src/context/: mod.rs
src/hotkey/: mod.rs
src/icons/: README.md
src/injector/: mod.rs
