[workspace]
members = [
    "service",
]
resolver = "2"

[profile.dev]
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package]
name = "promptkey"
version = "0.1.0"
edition = "2021"
default-run = "promptkey"

[[bin]]
name = "promptkey"
path = "src/main.rs"



[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
winres = "0.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2.0.0", features = ["tray-icon"] }
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.0.0"
sysinfo = "0.30.0"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
