[package]
name = "service"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Pipes",
] }